# conditioned-ensemble-interface

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
artifacts/: minipep_model.joblib  real_3ptb.joblib  real_3ptb_complex.joblib
benchmarks/minipep/: manifest.csv
configs/: aggregate.yaml  example.yaml  example_with_model.yaml  minipep.yaml  real_3ptb.yaml  real_3ptb_complex.yaml
data/3ptb/: ligand.pdbqt  ligand.sdf  receptor.pdbqt
datasets/: 3ptb.jsonl  3ptb_complexes.jsonl  minipep.jsonl  toy_dataset.jsonl  train.jsonl
docs/: PROJECT_NARRATIVE.md
notebooks/: CEI_report_template.ipynb
runs/: filtered_predictions.jsonl  minipep_preds.jsonl  minipep_summary.csv  out_toy.jsonl  real_3ptb_complex_preds.jsonl  real_3ptb_complex_summary.csv  real_3ptb_preds.jsonl  real_3ptb_summary.csv  summary.csv  summary.html  sweep.csv
runs/3ptb_smina/: pose_#1.sdf  pose_#10.sdf  pose_#2.sdf  pose_#3.sdf  pose_#4.sdf  pose_#5.sdf  pose_#6.sdf  pose_#7.sdf  pose_#8.sdf  pose_#9.sdf  poses.pdbqt
scripts/: aggregate_and_filter.py  box_from_ligand.py  build_dataset_from_manifest.py  condition_sweep.py  eval_baseline.py  eval_pose_rmsd_pdb.py  eval_topk.py  make_jsonl_from_complexes.py  protonate_dir.sh  run_all.sh  tag_chain_L.py  tag_chain_L_dir.py  train_gbt.py
src/conditioned_ensemble_interface/: cli.py
src/conditioned_ensemble_interface.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_smoke.py
(+6 files in other folders)
